www/css/header.css
header {
  display: block;
  width: 100%;
  height: 5vw;
  padding: 2vw 0 2vw 0;
}
body {
  font-family: 'Play', sans-serif;
  font-family: 'Rokkitt', serif;
  padding-right: 2%;
  padding-left: 2%;
}
h1 {
  font-size: 2.5em;
  display: inline-block;
  float: left;
  padding-left: .5%;
}
ul {
	overflow: auto;
  margin: 0;
  padding: 0;
  display: inline-block;
  float: right;
}
ul li {
	list-style-type: none;
	/*float: left;*/
  display: inline-block;
}
i {
	color: #3b3c3d;
	width: 5vw;
	height: 4vw;
	border-radius: 25px;
	font-size: 3.5vw;
  font-weight: lighter;
}

